fixed overflow issues with landing page. Fixed container sizing on goals page

--- a/drills/version-1.2/goals.css
+++ b/drills/version-1.2/goals.css
@@ -4,3 +4,7 @@ body{
     background-size: 100%;
     background-repeat: no-repeat;
 }
+#goalsLanding{
+    font-size: 3em;
+
+}
