--- a/drills/version-1.2/index.css
+++ b/drills/version-1.2/index.css
@@ -13,4 +13,5 @@ body{
     background-image: url("imgs/TrainTracks.jpg");
     background-size: 100%;
     background-repeat: no-repeat;
+    overflow: hidden;
 }
