--- a/drills/version-1.2/main.css
+++ b/drills/version-1.2/main.css
@@ -1,7 +1,7 @@
 html, body { 
   height: 100%;
   width: 100%;
-     margin:0;
+     margin: 0;
      padding:0;
  }
 section {
@@ -12,7 +12,7 @@ section {
   width: 100%;
 }
 #footer {
-  position: absolute;
+  position: fixed;
   right: 0;
   bottom: 0;
   left: 0;
@@ -31,6 +31,7 @@ section {
 .heroText {
   font-size: 7em;
   font-family: "Noto Serif", serif;
+ 
 }
 .heroPtag{
     color: white;
@@ -42,12 +43,15 @@ section {
   flex-direction: column;
   align-items: center;
   width: 60%;
-  height: 25%;
+  height: auto;
   border-radius: 10px;
   background-color: rgba(0, 0, 0, 0.4);
+  position: relative;
 }
 #indexMainDiv{
   display: flex;
-  height: 90%;
+  height: 100%;
   width: 100%;
+  margin: .5em;
+  
 }
